--- a/src/styles/light.scss
+++ b/src/styles/light.scss
@@ -1,11 +1,16 @@
 @charset "utf-8";
 
 $family-sans-serif: 'Overpass', sans-serif;
+$big-phone: 384px;
+$tablet: 576px;
+$desktop: 769px;
+$widescreen-enabled: false;
 
 @import "~bulma/bulma.sass";
 
 body {
     font-family: 'Overpass', sans-serif;
+    margin-bottom: 1rem;
 }
 
 a {
@@ -18,17 +23,27 @@ h1, h2, h3, h4, h5, h6 {
     font-family: 'Permanent Marker', serif;
 }
 
+h1 {
+    font-size: 1.8em;
+
+    @media screen and (min-width: $big-phone) {
+        font-size: 2.2em;
+    }
+
+    @media screen and (min-width: $desktop) {
+        font-size: 2.8em;
+    }
+}
+
 h2, h3, h4, h5, h6 {
     font-family: 'Permanent Marker', serif;
     margin-bottom: 0.4rem;
-}
-
-h1 {
-    font-size: 1.8em;
-}
-
-h2 {
     font-size: 1.1em;
+
+    @media screen and (min-width: $big-phone) {
+        font-size: 1.4em;
+        margin-bottom: 0.8rem;
+    }
 }
 
 p, ol, ul {
@@ -48,17 +63,35 @@ main, header {
     margin-left: 1px;
     margin-right: 2px;
     padding-left: 0.4rem;
+
+    @media screen and (min-width: $tablet) {
+        border-right: 8px solid #3d3d37;
+        border-left: 8px solid #3d3f44;
+        padding: 1.8rem;
+    }
 }
 
 header {
     border-top: 2px solid #3d3f44;
-    margin-top: 1rem;
     padding-bottom: 1.4rem;
     padding-top: 0.8rem;
+
+    @media screen and (min-width: $tablet) {
+        border-top: 8px solid #3d3f44;
+        padding-bottom: 0;
+    }
+
+    @media screen and (min-width: $desktop) {
+        margin-top: 1.5rem;
+    }
 }
 
 main {
     margin-bottom: -38vw;
     padding-bottom: calc(38vw - 8px);
     padding-right: 0.4rem;
+
+    @media screen and (min-width: $tablet) {
+        padding-right: 1.8rem;
+    }
 }
