assorted styling fixes

--- a/src/styles/light.scss
+++ b/src/styles/light.scss
@@ -73,6 +73,7 @@ main, header {
 }
 
 header {
+    margin-top: 1px;
     border-top: 2px solid #3d3f44;
     padding-bottom: 1.4rem;
     padding-top: 0.8rem;
