--- a/src/components/SocialMedia/SocialMedia.module.scss
+++ b/src/components/SocialMedia/SocialMedia.module.scss
@@ -1,5 +1,11 @@
+$tablet: 576px;
+
 .socialMedia {
     text-align: center;
+
+    @media screen and (min-width: $tablet) {
+        padding: 0 6rem;
+    }
 }
 
 .icon {
