--- a/themes/carlosgm/layouts/_default/baseof.html
+++ b/themes/carlosgm/layouts/_default/baseof.html
@@ -6,7 +6,7 @@
     {{ partial "head.html" . }}
   </head>
   <body>
-    <div class="container mx-auto pt-6">
+    <div class="container mx-auto md:pt-6">
       <header>
         {{ partial "header.html" . }}
       </header>
