--- a/themes/carlosgm/assets/css/main.css
+++ b/themes/carlosgm/assets/css/main.css
@@ -42,13 +42,9 @@ footer {
 
   width: calc(100% + 4px);
 
-  @media (width >= 48rem) {
+  @media screen and (min-width: 48rem) {
     width: calc(100% + 8px);
   }
-}
-
-.footer-width-8px {
-  width: calc(100% + 8px);
 }
 
 .text-red-gm {
